# mongoose-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MongooseConfig.cmake.in  README.md  version.h.in
cmake/Modules/: GetVersionFromGitTag.cmake
examples/: basic_auth.cpp  examples.cpp
lib/: AbstractRequestCoprocessor.h  AbstractRequestPreprocessor.h  Controller.cpp  Controller.h  Request.cpp  Request.h  Response.cpp  Response.h  Server.cpp  Server.h  Session.cpp  Session.h  Sessions.cpp  Sessions.h  Utils.cpp  Utils.h
